src/test/deca/context/invalid/return_objet_dans_int.deca
// Description :
// retourn invalid ( objet au lieu de objet)

// Resultats :
// Echec

class VAR { }

class Arbitre {
    int verifier() {
        return new VAR();
    }
}

{ }
